--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -429,13 +429,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Estadísticas descriptivas datos 2022"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Air_pollution_level</th>\n",
+       "      <th>CO2_Emissions</th>\n",
+       "      <th>CO2_Emissions%</th>\n",
+       "      <th>recycling_rate</th>\n",
+       "      <th>IDH</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>37.625000</td>\n",
+       "      <td>96.617136</td>\n",
+       "      <td>3.445357</td>\n",
+       "      <td>40.321429</td>\n",
+       "      <td>0.907214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>10.747385</td>\n",
+       "      <td>147.854639</td>\n",
+       "      <td>5.270467</td>\n",
+       "      <td>15.229050</td>\n",
+       "      <td>0.041923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>6.410000</td>\n",
+       "      <td>1.759532</td>\n",
+       "      <td>0.060000</td>\n",
+       "      <td>12.100000</td>\n",
+       "      <td>0.799000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>34.442500</td>\n",
+       "      <td>13.145578</td>\n",
+       "      <td>0.470000</td>\n",
+       "      <td>32.200000</td>\n",
+       "      <td>0.879000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>40.675000</td>\n",
+       "      <td>37.853626</td>\n",
+       "      <td>1.350000</td>\n",
+       "      <td>40.850000</td>\n",
+       "      <td>0.910500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>45.360000</td>\n",
+       "      <td>79.421159</td>\n",
+       "      <td>2.832500</td>\n",
+       "      <td>52.000000</td>\n",
+       "      <td>0.943000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>53.640000</td>\n",
+       "      <td>659.501847</td>\n",
+       "      <td>23.510000</td>\n",
+       "      <td>69.100000</td>\n",
+       "      <td>0.966000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Air_pollution_level  CO2_Emissions  CO2_Emissions%  recycling_rate  \\\n",
+       "count            28.000000      28.000000       28.000000       28.000000   \n",
+       "mean             37.625000      96.617136        3.445357       40.321429   \n",
+       "std              10.747385     147.854639        5.270467       15.229050   \n",
+       "min               6.410000       1.759532        0.060000       12.100000   \n",
+       "25%              34.442500      13.145578        0.470000       32.200000   \n",
+       "50%              40.675000      37.853626        1.350000       40.850000   \n",
+       "75%              45.360000      79.421159        2.832500       52.000000   \n",
+       "max              53.640000     659.501847       23.510000       69.100000   \n",
+       "\n",
+       "             IDH  \n",
+       "count  28.000000  \n",
+       "mean    0.907214  \n",
+       "std     0.041923  \n",
+       "min     0.799000  \n",
+       "25%     0.879000  \n",
+       "50%     0.910500  \n",
+       "75%     0.943000  \n",
+       "max     0.966000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_2022.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Nivel de Contaminación del Aire (Air_pollution_level):\n",
+    "\n",
+    "- **Promedio**: El nivel promedio de contaminación del aire es de 37.63, con una desviación estándar de 10.75, indicando una variabilidad moderada entre los países.\n",
+    "- **Rango**: Los niveles de contaminación varían desde un mínimo de 6.41 hasta un máximo de 53.64. Esto sugiere que hay una amplia gama de condiciones ambientales entre los países analizados.\n",
+    "- **Percentiles**: El 25% de los países tienen niveles de contaminación del aire por debajo de 34.44, mientras que el 75% tiene niveles por debajo de 45.36. Esto muestra que la mayoría de los países se encuentran en el rango medio-alto de contaminación del aire.\n",
+    "\n",
+    "##### Emisiones de CO2 (CO2_Emissions y CO2_Emissions%):\n",
+    "\n",
+    "- **Promedio y Variabilidad**: Las emisiones de CO2 tienen un promedio de 96.62 (en unidades absolutas) y una desviación estándar de 147.85, indicando una gran variabilidad entre países. Las emisiones en porcentaje tienen un promedio de 3.45 y una desviación estándar de 5.27, lo que también muestra variabilidad, aunque en menor escala.\n",
+    "- **Rango**: Las emisiones absolutas van desde 1.76 hasta 659.50, y en porcentaje desde 0.06% hasta 23.51%. Esto indica una enorme disparidad en las emisiones entre los países, con algunos países emitiendo significativamente más CO2 que otros.\n",
+    "\n",
+    "##### Tasa de Reciclaje (recycling_rate):\n",
+    "\n",
+    "- **Promedio y Variabilidad**: La tasa de reciclaje promedio es de 40.32% con una desviación estándar de 15.23%. Esto sugiere que las tasas de reciclaje varían considerablemente entre los países.\n",
+    "- **Rango**: Las tasas de reciclaje oscilan entre un mínimo de 12.10% y un máximo de 69.10%. Esta variabilidad indica que algunos países tienen prácticas de reciclaje mucho más avanzadas que otros.\n",
+    "\n",
+    "##### Índice de Desarrollo Humano (IDH):\n",
+    "\n",
+    "- **Promedio y Variabilidad**: El IDH promedio es de 0.91 con una desviación estándar de 0.04. Esto indica una baja variabilidad entre paises. \n",
+    "- **Rango**: El IDH varía entre 0.80 y 0.97."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Matriz de Correlación\n",
     "Se calcula y visualiza una matriz de correlación para las variables en el año 2022. Este gráfico nos ayuda a entender qué tan relacionadas están variables como la contaminación del aire, las emisiones de CO2, las tasas de reciclaje y el índice de desarrollo humano (IDH)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -458,6 +624,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "La correlación positiva moderada entre el IDH y la tasa de reciclaje, junto con la correlación negativa con la contaminación del aire, sugiere que el desarrollo económico y social está relacionado con mejores prácticas ambientales."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Combinar y Visualizar Datos\n",
     "\n",
     "Se realiza la combinación de datasets anuales y bianuales para tener una visión más completa de la evolución de los indicadores a lo largo del tiempo. Luego, se generan gráficos para visualizar la evolución de las variables por país.\n",
@@ -467,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -493,6 +666,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Los datos varian mucho de un pais a otro. Aunque no podamos sacar conclusiones generales si podemos fijarnos en que las variables parecen comportarse de forma diferente en cada pais. Esta variabilidad indica que las políticas, prácticas y niveles de conciencia ambiental pueden diferir significativamente de un país a otro. A pesar de esta variabilidad, se observa una tendencia general positiva en la mayoría de los países, con un aumento en las tasas de reciclaje, especialmente en los últimos años. Esto sugiere que, en general, los esfuerzos para mejorar las tasas de reciclaje están dando frutos, aunque el ritmo y el éxito pueden variar considerablemente entre países. Es importante notar que las tasas de reciclaje no solo han aumentado en todos los países de manera uniforme, sino que cada país muestra un comportamiento distinto en su evolución. Algunos países pueden tener aumentos constantes, mientras que otros podrían experimentar fluctuaciones o estancamientos. Esto subraya la necesidad de abordar las estrategias de reciclaje con enfoques específicos para cada contexto nacional.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Comparación de IDH y Variables Ambientales\n",
     "\n",
     "Se grafican barras comparativas para mostrar la relación entre el IDH de cada país y otras variables ambientales como el nivel de contaminación del aire, las tasas de reciclaje y las emisiones de CO2."
@@ -500,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -520,8 +700,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Algunos países con altos niveles de emisiones de CO2 también tienen altos niveles de contaminación del aire, mientras que otros tienen emisiones altas pero niveles de contaminación relativamente bajos.\n",
+    "\n",
+    "Ejemplos:\n",
+    "- **Alemania** tiene las emisiones de CO2 más altas y también un nivel de contaminación del aire relativamente alto.\n",
+    "- **Noruega** tiene emisiones de CO2 más bajas y un nivel de contaminación del aire bajo."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -580,6 +771,38 @@
    "source": [
     "# Relación entre IDH y Emisiones de CO2\n",
     "relacion_idh_co2(data_2022)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El **IDH** podría tener una relación con los niveles de contaminación del aire, las emisiones de CO2 y la tasa de reciclaje.\n",
+    "\n",
+    "Ejemplos:\n",
+    "- **Noruega y Dinamarca** tienen los IDH más altos y también niveles relativamente bajos de contaminación del aire y emisiones de CO2.\n",
+    "- **Bulgaria y Rumania** tienen un IDH más bajo y niveles relativamente altos de contaminación del aire y emisiones de CO2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusiones generales\n",
+    "\n",
+    "**Tendencias en el Tiempo**: Los datos han proporcionado una visión sobre cómo las variables relacionadas con el medio ambiente y el desarrollo han evolucionado a lo largo del tiempo en los distintos países europeos. Se observa que, en general, la tasa de reciclaje tiende a aumentar, especialmente en los últimos años, lo cual es un indicador positivo de las políticas ambientales adoptadas por los países.\n",
+    "\n",
+    "**Variabilidad entre Países**: Existe una notable variabilidad entre países en cuanto a niveles de contaminación del aire, emisiones de CO2, tasas de reciclaje e IDH. Algunos países presentan indicadores ambientales significativamente mejores, mientras que otros muestran mayores desafíos. Esta variabilidad refleja las diferencias en las políticas ambientales, el desarrollo económico y la infraestructura de reciclaje.\n",
+    "\n",
+    "La **correlación entre las variables** analizadas no es muy alta, lo que sugiere que no hay una relación directa y clara entre todas las variables. Por ejemplo, aunque el desarrollo humano (IDH) puede estar asociado con mejores prácticas ambientales, la relación entre la tasa de reciclaje y las emisiones de CO2 no es necesariamente lineal o fuerte. La falta de alta correlación entre variables significa que es difícil determinar cómo una variable influye directamente en otra. Esto puede ser resultado de múltiples factores que afectan cada variable de manera independiente o de la influencia de factores externos no considerados en este análisis.\n",
+    "\n",
+    "A pesar de la falta de alta correlación, es evidente que ciertos países con un **IDH** más alto tienden a tener **mejores prácticas ambientales**. Esto sugiere que el desarrollo económico y humano puede facilitar la implementación de políticas ambientales más efectivas.\n",
+    "\n",
+    "#### Propuesta de Mejora en el Análisis:\n",
+    "\n",
+    "- **Inclusión de Más Indicadores**: Dado que el ámbito ambiental es complejo y multifactorial, la inclusión de otros indicadores ambientales en el análisis podría proporcionar una visión más completa. Variables adicionales como la calidad del agua, el uso de energía renovable, y las políticas de conservación pueden ayudar a entender mejor las dinámicas entre los diferentes aspectos ambientales y cómo se interrelacionan con el desarrollo humano.\n",
+    "\n",
+    "- **Análisis Conjunto**: Realizar estudios que integren múltiples indicadores ambientales y económicos permitiría un análisis más holístico. Esto podría revelar patrones y relaciones más complejas que no son evidentes cuando se estudian variables de forma aislada. Utilizar técnicas estadísticas avanzadas y modelos integrados puede facilitar la identificación de interacciones y efectos que podrían mejorar la formulación de políticas y estrategias ambientales."
    ]
   }
  ],
