archivo_.gz_data

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -17,9 +17,7 @@
       "outputs": [],
       "source": [
         "from functions import *\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "import pandas as pd\n",
+        "\n",
         "pd.set_option('display.max_columns', None)"
       ]
     },
@@ -308,7 +306,7 @@
       ],
       "source": [
         "# Procesar datos de generación de residuos\n",
-        "waste_generation = process_waste_generation_data('data_to_clean/generacion_residuos')\n",
+        "waste_generation = process_waste_generation_data('data_to_clean/generacion_residuos.gz')\n",
         "waste_generation"
       ]
     },
